Exclude start/end container in Range::getBorderAndTextQuads

Change Range::getBorderAndTextQuads to exclude the size of the container
elements for either end point. The porition of the element included in a
range is accounted for when computing the size for the start & end node.

TEST=fast/dom/Range/range-spanning-elements-bounding-client-rect.html
BUG=623301
R=yosin@chromium.org

Review-Url: https://codereview.chromium.org/2209513002
Cr-Commit-Position: refs/heads/master@{#412263}

Former-commit-id: 7b05ec36906acc9e75c2e06ab68bbd0aa8ba691c